@startuml

title class_diagram\n

  namespace com.example.demo1.Main  {
    namespace om.example.demo1 {
      class com.example.demo1.Main {
          + currentFilesBMP : String
          + primaryStage : Stage
          ~ conn : Connection
          ~ image : BufferedImage
          ~ scene : Scene
          {static} - APP_WINDOW_WIDTH : int
          {static} - ROWS_AMOUNT : int
          {static} - WIDTH : int
          - grid : Spot[][]
          - mouseEventTypes : List<EventType<MouseEvent>>
          - pane : Pane
          - rects : Rectangle[][]
          + LoadSavedGrid()
          + algorithm()
          + checkLoad()
          + clearMap()
          {static} + getClickedPos()
          {static} + h()
          {static} + main()
          + makeGrid()
          {static} + reconstructPath()
          + saveMapBMP()
          + saveMapToDb()
          + start()
          - changeSpotColour()
          - displayMapsWindow()
          - handleEvent()
          - repaintSpots()
      }
    }
  }
  

namespace  com.example.demo1.Main{
    namespace om.example.demo1 {
      class com.example.demo1.Main.Spot {
          + col : int
          + color : Color
          + neighbors : List<Spot>
          + row : int
          + totalRows : int
          + width : int
          + x : int
          + y : int
          + Spot()
          + getPos()
          + isBarrier()
          + makeBarrier()
          + makeClosed()
          + makeEnd()
          + makeOpen()
          + makePath()
          + makeStart()
          + reset()
          + updateNeighbors()
      }
    }
  }
  

  com.example.demo1.Main -up-|> javafx.application.Application
  com.example.demo1.Main o-- com.example.demo1.Main.Spot : end
  com.example.demo1.Main o-- com.example.demo1.Main.Spot : start
  com.example.demo1.Main +-down- com.example.demo1.Main.Spot


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
